--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
   "license": "BSD-3-Clause",
   "type": "library",
   "require": {
+    "ext-fileinfo": "*",
     "php": ">=7.2.0"
   },
   "require-dev": {
