--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
   "type": "library",
   "require": {
     "ext-fileinfo": "*",
+    "ext-json": "*",
     "php": ">=7.2.0"
   },
   "require-dev": {
