--- a/phpstan.neon
+++ b/phpstan.neon
@@ -18,3 +18,5 @@ parameters:
 	ignoreErrors:
 		# solved by unit tests
 		- '#Argument of an invalid type ArrayAccess supplied for foreach, only iterables are supported.#'
+		# strval function
+		- '#Parameter \#1 \$va[rl]u?e? of function [si][tn][rt]val expects#'
