--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,10 @@
   "require": {
     "ext-fileinfo": "*",
     "ext-json": "*",
-    "php": ">=7.2.0"
+    "php": ">=7.4.0"
   },
   "require-dev": {
+    "shipmonk/composer-dependency-analyser": "^1.4",
     "phpstan/phpstan": "^1.0",
     "phpstan/phpstan-phpunit": "^1.0",
     "friendsofphp/php-cs-fixer": "^3.0",
